<resources>
    <string name="app_name">Prueba Mercadona</string>

    <!-- COMMON DATA -->
    <string name="empty_field">Este campo no puede estar vacío.</string>
    <string name="enough_lenght">Debes introducir más de 2 dígitos</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_price">Precio</string>
    <string name="hint_weight">Precio por formato</string>
    <string name="hint_format">Formato</string>
    <string name="hint_packaging">Empaquetado</string>

    <!-- PRODUCT -->
    <string name="weight_format">%1s €/ %1s</string>
    <string name="text_price">%1s €</string>
    <string name="text_url">Ir a la web</string>

    <!-- MAIN -->
    <string name="toolbar_main_title">Listado de productos</string>

    <!-- ADD PRODUCT -->
    <string name="text_add_product">Añadir producto</string>
    <string name="toolbar_add_product_title">Añadir producto</string>

    <!-- EDIT PRODUCT -->
    <string name="text_edit_product">Editar producto</string>
    <string name="toolbar_edit_product_title">Editar producto</string>
</resources>