<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.example.mercadona.ui.edit_product.EditProductActivity" />

        <variable
            name="viewModel"
            type="com.example.mercadona.ui.edit_product.EditProductViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="12dp"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:title="@string/toolbar_edit_product_title"
                app:titleTextColor="@color/green_mercadona" />

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    style="@style/text_input_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:text="@={viewModel.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_price"
                    style="@style/text_input_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_price"
                        android:inputType="number"
                        android:maxLength="3"
                        android:text="@={viewModel.price}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_weight"
                    style="@style/text_input_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_weight"
                        android:inputType="number"
                        android:text="@={viewModel.weight}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_format"
                    style="@style/text_input_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_format"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_format"
                        android:inputType="text"
                        android:text="@={viewModel.format}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_packaging"
                    style="@style/text_input_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_packaging"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_packaging"
                        android:inputType="text"
                        android:maxLength="3"
                        android:text="@={viewModel.packaging}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_mercadona"
                    android:enabled="@{viewModel.isAllFilled}"
                    android:onClick="@{() -> activity.editProduct()}"
                    android:paddingVertical="12dp"
                    android:text="@string/text_edit_product"
                    app:cornerRadius="12dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>